--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,18 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
 
 <head>
-  <meta charset="utf-8">
-  <title>QfcEss</title>
+ 
+
+  <meta charset="UTF-8">
+  <title>ESS Admin Utility</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+
+
+  <base href="/">
+ 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
