--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     href="https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-
+    <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
 </head>
 
 <body class="mat-typography">
